--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,7 +18,7 @@ body {
   background-repeat: no-repeat;
 	color: #222;
 	margin: 0;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 a{
