--- a/pokedexApp/templates/pokedexApp/pokemon_busca.html
+++ b/pokedexApp/templates/pokedexApp/pokemon_busca.html
@@ -3,3 +3,7 @@
 {% block title %}
 <title>Search | My Pokemon!</title>
 {% endblock %}
+
+{% block pokemons_found %}
+  <p class="results-found">{{pokemonsList.paginator.count}} pokemons found.</p>
+{% endblock %}
