--- a/pokedexApp/templates/pokedexApp/pokemon_busca.html
+++ b/pokedexApp/templates/pokedexApp/pokemon_busca.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Search | My Pokemon!</title>
+<title>Search | My Pokedex!</title>
 {% endblock %}
 
 {% block pokemons_found %}
