--- a/pokedexApp/templates/pokedexApp/index.html
+++ b/pokedexApp/templates/pokedexApp/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>My Pokemon!</title>
+  <title>My Pokedex!</title>
 {% endblock %}
 
 {% block pokemons_found %}
